# forge-ec

./: .gitignore  ACKNOWLEDGMENTS.md  AUTHENTICATION_FIXES.md  AUTHENTICATION_FREEZING_FIXES.md  CHANGELOG.md  CODE_BLOCK_LAYOUT_FIXES.md  CONTRIBUTING.md  CRITICAL_FIXES_SUMMARY.md  Cargo.toml  FIREBASE_AUTH_CONFIGURATION_GUIDE.md  FIREBASE_AUTH_FIXES_SUMMARY.md  FIREBASE_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE-APACHE  LICENSE-MIT  LOADING_SCREEN_FIXES.md  PERFORMANCE_ENHANCEMENTS_PHASE1.md  README.md  ROADMAP.md  SCROLL_FIXES_SUMMARY.md  TODO.md  VISUAL_FLUIDITY_RECOMMENDATIONS.md  WEBSITE_DEPLOYMENT_SUMMARY.md  clippy.toml  deploy.sh  firebase-auth-diagnostic.html  firebase.json  firestore.indexes.json  firestore.rules  index.html  offline.html  package.json  robots.txt  rustfmt.toml  sitemap.xml  sw.js  test-auth.html  test-github-api.html  test-loading-fix.html  test-scroll-fixes.html  (+3 more)
.cargo/: config.toml
.github/: CI_OPTIMIZATION.md
.github/workflows/: ci.yml  ethicalcheck.yml  extended-checks.yml  rust-clippy.yml  security.yml
about/: index.html
css/: about.css  animations.css  auth.css  components.css  docs.css  examples.css  loading.css  prism.css  scroll-performance.css  style.css
docs/: API-Documentation.md  Architecture-Overview.md  Changelog.md  Contributing-Guidelines.md  Curve-Implementations.md  Examples-and-Tutorials.md  Installation-Guide.md  Quick-Start-Guide.md  README.md  Security-Considerations.md  Testing-Guide.md  Troubleshooting.md  docs.css  docs.js  index.html
docs/api/: encoding.html  hashing.html  rng.html  signatures.html
docs/getting-started/: configuration.html  installation.html  quick-start.html
docs/security/: constant-time.html  guidelines.html  vulnerability-disclosure.html
examples/: ecdh.rs  ecdsa.rs  eddsa.rs  index.html  keygen.rs  openssl_interop.rs  schnorr.rs
forge-ec-core/: Cargo.toml  README.md
forge-ec-core/src/: lib.rs
forge-ec-curves/: Cargo.toml  README.md
forge-ec-curves/src/: curve25519.rs  ed25519.rs  lib.rs  p256.rs  secp256k1.rs
forge-ec-encoding/: Cargo.toml  README.md
forge-ec-encoding/src/: base58.rs  der.rs  lib.rs  pem.rs  point.rs
forge-ec-examples/: Cargo.toml
forge-ec-examples/src/: ecdh.rs  ecdsa.rs  eddsa.rs  keygen.rs  openssl_interop.rs  schnorr.rs
forge-ec-hash/: Cargo.toml  README.md
forge-ec-hash/src/: blake2.rs  hash_to_curve.rs  lib.rs  sha2.rs  sha3.rs
forge-ec-rng/: Cargo.toml  README.md
forge-ec-rng/src/: lib.rs  os_rng.rs  rfc6979.rs
forge-ec-rng/tests/: rfc6979_test.rs
forge-ec-signature/: Cargo.toml  README.md
forge-ec-signature/src/: ecdsa.rs  eddsa.rs  lib.rs  schnorr.rs
js/: about.js  accessibility-focus.js  accessibility-testing.js  animations.js  contact.js  docs-search.js  docs.js  enhanced-transitions.js  examples.js  firebase-analytics.js  firebase-auth.js  firebase-config.js  firebase-docs.js  firebase-functions.js  firebase-integration.js  firebase-ui.js  forge-animation.js  github-api.js  hero-canvas.js  interactive-components.js  keyboard-shortcuts.js  main.js  micro-interactions.js  performance-budgets.js  performance-monitor.js  performance-validation.js  prism.js  quicklink-prefetch.js  scroll-coordinator.js  sentry-monitoring.js  smooth-scroll.js  theatre-animations.js
p256-test/: Cargo.toml
p256-test/src/: main.rs
scripts/: optimize-images.js
src/: lib.rs
test/: performance.test.js
test_forge_ec/: .gitignore  Cargo.toml
test_forge_ec/src/: main.rs
website/about/: index.html
website/js/: about.js
