[workspace]
members = [
    "forge-ec-core",
    "forge-ec-curves",
    "forge-ec-signature",
    "forge-ec-encoding",
    "forge-ec-hash",
    "forge-ec-rng",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Forge EC Contributors"]
edition = "2021"
rust-version = "1.70.0"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/forge-ec/forge-ec"
homepage = "https://github.com/forge-ec/forge-ec"
documentation = "https://docs.rs/forge-ec"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "ecc", "elliptic-curves", "cryptography", "ecdsa"]

[[example]]
name = "ecdsa"
path = "examples/ecdsa.rs"

[[example]]
name = "ecdh"
path = "examples/ecdh.rs"

[[example]]
name = "eddsa"
path = "examples/eddsa.rs"

[[example]]
name = "keygen"
path = "examples/keygen.rs"

[[example]]
name = "openssl_interop"
path = "examples/openssl_interop.rs"

[[example]]
name = "schnorr"
path = "examples/schnorr.rs"

[workspace.dependencies]
# Core dependencies
subtle = "2.5"
zeroize = { version = "1.6", features = ["zeroize_derive"] }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
digest = "0.10"
sha2 = "0.10"
hmac = "0.12"

# Dependencies that may be used optionally by crates
rayon = { version = "1.8" }
base58 = { version = "0.2" }

# Internal crates
forge-ec-core = { path = "forge-ec-core", version = "0.1.0" }
forge-ec-curves = { path = "forge-ec-curves", version = "0.1.0" }
forge-ec-signature = { path = "forge-ec-signature", version = "0.1.0" }
forge-ec-encoding = { path = "forge-ec-encoding", version = "0.1.0" }
forge-ec-hash = { path = "forge-ec-hash", version = "0.1.0" }
forge-ec-rng = { path = "forge-ec-rng", version = "0.1.0" }

# Dev dependencies
criterion = "0.5"
proptest = "1.3"
hex = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
debug = false
strip = "debuginfo"
codegen-units = 1

[profile.dev]
opt-level = 2
debug = true

[profile.test]
opt-level = 2
debug = true